Trying another approach to building this crap